# cibola.rs

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md
benches/: char-parse.bench  parse.rs  plot_script  u8-parse.bench
benches/desktop/: char-parse-2.bench  char-parse.bench  initial-u8-parse.bench  u8-2019-06-27.bench
benches/laptop/: lexical_core.bench
examples/: simple.rs
src/: json.rs  lib.rs  parse.rs
