[package]
name = "cibola"
version = "0.1.0"
authors = ["Emil Hammarstrom <emil.a.hammarstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "parse"
harness = false

[dependencies]

